--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
-.App {
-  text-align: center;
-}
+.app{
+  height: 100vh;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding: 25px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+
+}
+.input{
+  margin-top: -550px;
+  margin-bottom: 50px;
+  padding: 10px;
+  width: 80%;
+  margin: auto;
+  border: solid lightgrey;
+  border-radius: 6px;
+  font-size: 16px;
+}
+::placeholder{
+  justify-content: center;
+  align-items: center;
+}
+.input:focus{
+  outline: none;
+}
+.weather-data{
+  margin-top: 10px;
+  
+  display: flex;
+  flex-direction: column;
+  color: azure;
+  justify-content: center;
+  align-items: center;
+
+  
+}
+.city{
+
+  margin-top: 50px;
+  font-size: 50px;
   color: white;
 }
+.temp{
+  margin-top: -20px;
+  font-size: 50px;
+  color: azure;
+  padding: 10px;
+  border: 1px solid lightgrey;
+  border-radius: 12px;
+  
+}
+.weather{
+  margin-top: -20px;
+  font-size: 30px;
+  color: azure;
+  
+  
+}
+.time{
+  margin-top: -20px;
+  font-size: 30px;
+  color: azure;
+  
+  
+}
+table, tr, td {
 
-.App-link {
-  color: #61dafb;
+  border-collapse: collapse;
+}
+tr, td {
+  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 30px;
+  font-size: 20px;
+  color: azure;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.location{
+  margin-right: 1360px;
+  margin-top: -34px;
+  color: white;
+  
+}
+.location:hover{
+  cursor: pointer;
+  transition: ease-out;
 }
